<resources>
    <string name="app_name">TaipeiZoo</string>
    <string name="home_name">台北市立動物園</string>
    <string name="plant_name">植物資料</string>
    <string name="open_url">開啟網址</string>
    <string name="also_name">別名</string>
    <string name="brief">簡介</string>
    <string name="feature">辨認方式</string>
    <string name="function">功能性</string>
    <string name="last_update">更新</string>
</resources>